# compass

./: CMakeLists.txt  README.md  build.sh
base/: string_tool.cc  string_tool.h
compass/base/: CMakeLists.txt  string_tool.cc
test/: CMakeLists.txt  gtest.cmake  main.cc
test/base/: string_tool_test.cc
